Fixes issue with jumpy column width (#184)
Fixes #182 

Did not implement "ellipis in the middle of the field name", since there was no easy solution to this. Should be a separate issue.

--- a/src/components/model.pcss
+++ b/src/components/model.pcss
@@ -26,6 +26,8 @@
     height: 5em;
     justify-content: center;
     min-height: 5em;
+    text-align: center;
+    word-break: break-word;
 
     .nbr-of-rows {
       font-weight: 400;
@@ -182,6 +184,7 @@
 
     .column {
       box-sizing: border-box;
+      max-width: 48rem;
       padding: 3.5em;
     }
 
