--- a/src/components/table-field.pcss
+++ b/src/components/table-field.pcss
@@ -12,6 +12,12 @@
   padding: 1em;
   position: relative;
 
+  .name,
+  .bartext {
+    margin-right: 1em;
+    padding: 0 0.5em;
+  }
+
   &:hover {
     box-shadow: 0 0 2em -0.5em #999;
   }
@@ -36,7 +42,6 @@
     .name {
       background-color: #019b39;
       color: white;
-      padding: 0 0.5em;
     }
   }
 
